--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"build": "nest build",
 		"format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
 		"start": "nest start",
-		"dev": "nest start --watch",
+		"dev": "NODE_ENV=development nest start --watch",
 		"start:debug": "nest start --debug --watch",
 		"start:prod": "node dist/main",
 		"lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -28,20 +28,26 @@
 		"@nestjs/jwt": "^7.2.0",
 		"@nestjs/mapped-types": "*",
 		"@nestjs/mongoose": "^7.2.4",
+		"@nestjs/passport": "^7.1.6",
 		"@nestjs/platform-express": "^7.6.15",
+		"@nestjs/swagger": "^4.8.2",
 		"apollo-server-express": "^2.25.2",
 		"bcrypt": "^5.0.1",
+		"class-transformer": "^0.4.0",
 		"class-validator": "^0.13.1",
 		"graphql": "^15.5.1",
 		"graphql-tools": "^7.0.5",
 		"helmet": "^4.6.0",
+		"jsonwebtoken": "^8.5.1",
+		"lodash": "^4.17.21",
 		"moment": "^2.29.1",
 		"mongoose": "^5.12.15",
 		"morgan": "^1.10.0",
+		"passport": "^0.4.1",
 		"passport-jwt": "^4.0.0",
 		"reflect-metadata": "^0.1.13",
 		"rimraf": "^3.0.2",
-		"rxjs": "^6.6.6",
+		"swagger-ui-express": "^4.1.6",
 		"type-graphql": "^1.1.1"
 	},
 	"devDependencies": {
@@ -51,6 +57,8 @@
 		"@types/bcrypt": "^5.0.0",
 		"@types/express": "^4.17.11",
 		"@types/jest": "^26.0.22",
+		"@types/jsonwebtoken": "^8.5.2",
+		"@types/lodash": "^4.14.170",
 		"@types/morgan": "^1.9.2",
 		"@types/node": "^14.14.36",
 		"@types/passport-jwt": "^3.0.5",
