--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"test:e2e": "jest --config ./test/jest-e2e.json"
 	},
 	"dependencies": {
+		"@nestjs-modules/mailer": "^1.6.0",
 		"@nestjs/common": "^7.6.15",
 		"@nestjs/config": "^0.6.3",
 		"@nestjs/core": "^7.6.15",
@@ -33,16 +34,19 @@
 		"@nestjs/swagger": "^4.8.2",
 		"apollo-server-express": "^2.25.2",
 		"bcrypt": "^5.0.1",
+		"bluebird": "^3.7.2",
 		"class-transformer": "^0.4.0",
 		"class-validator": "^0.13.1",
 		"graphql": "^15.5.1",
 		"graphql-tools": "^7.0.5",
+		"handlebars": "^4.7.7",
 		"helmet": "^4.6.0",
 		"jsonwebtoken": "^8.5.1",
 		"lodash": "^4.17.21",
 		"moment": "^2.29.1",
 		"mongoose": "^5.12.15",
 		"morgan": "^1.10.0",
+		"nodemailer": "^6.6.2",
 		"passport": "^0.4.1",
 		"passport-jwt": "^4.0.0",
 		"reflect-metadata": "^0.1.13",
@@ -55,6 +59,7 @@
 		"@nestjs/schematics": "^7.3.0",
 		"@nestjs/testing": "^7.6.15",
 		"@types/bcrypt": "^5.0.0",
+		"@types/bluebird": "^3.5.35",
 		"@types/express": "^4.17.11",
 		"@types/jest": "^26.0.22",
 		"@types/jsonwebtoken": "^8.5.2",
