--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
 		"reflect-metadata": "^0.1.13",
 		"rimraf": "^3.0.2",
 		"swagger-ui-express": "^4.1.6",
-		"type-graphql": "^1.1.1"
+		"type-graphql": "^1.1.1",
+		"uuid": "^8.3.2"
 	},
 	"devDependencies": {
 		"@nestjs/cli": "^7.6.0",
@@ -68,6 +69,7 @@
 		"@types/node": "^14.14.36",
 		"@types/passport-jwt": "^3.0.5",
 		"@types/supertest": "^2.0.10",
+		"@types/uuid": "^8.3.1",
 		"@typescript-eslint/eslint-plugin": "^4.19.0",
 		"@typescript-eslint/parser": "^4.19.0",
 		"eslint": "^7.22.0",
