--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
 		"apollo-server-express": "^2.25.2",
 		"bcrypt": "^5.0.1",
 		"bluebird": "^3.7.2",
+		"cache-manager": "^3.4.4",
+		"cache-manager-redis-store": "^2.0.0",
 		"class-transformer": "^0.4.0",
 		"class-validator": "^0.13.1",
 		"graphql": "^15.5.1",
@@ -51,6 +53,7 @@
 		"passport-jwt": "^4.0.0",
 		"reflect-metadata": "^0.1.13",
 		"rimraf": "^3.0.2",
+		"rxjs": "^7.1.0",
 		"swagger-ui-express": "^4.1.6",
 		"type-graphql": "^1.1.1",
 		"uuid": "^8.3.2"
@@ -61,6 +64,7 @@
 		"@nestjs/testing": "^7.6.15",
 		"@types/bcrypt": "^5.0.0",
 		"@types/bluebird": "^3.5.35",
+		"@types/cache-manager": "^3.4.0",
 		"@types/express": "^4.17.11",
 		"@types/jest": "^26.0.22",
 		"@types/jsonwebtoken": "^8.5.2",
