--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"@nestjs/mongoose": "^7.2.4",
 		"@nestjs/passport": "^7.1.6",
 		"@nestjs/platform-express": "^7.6.15",
+		"@nestjs/schedule": "^0.4.3",
 		"@nestjs/swagger": "^4.8.2",
 		"apollo-server-express": "^2.25.2",
 		"bcrypt": "^5.0.1",
@@ -65,6 +66,7 @@
 		"@types/bcrypt": "^5.0.0",
 		"@types/bluebird": "^3.5.35",
 		"@types/cache-manager": "^3.4.0",
+		"@types/cron": "^1.7.2",
 		"@types/express": "^4.17.11",
 		"@types/jest": "^26.0.22",
 		"@types/jsonwebtoken": "^8.5.2",
