--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"@nestjs/schedule": "^0.4.3",
 		"@nestjs/swagger": "^4.8.2",
 		"apollo-server-express": "^2.25.2",
+		"axios": "^0.21.1",
 		"bcrypt": "^5.0.1",
 		"bluebird": "^3.7.2",
 		"cache-manager": "^3.4.4",
