--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 	},
 	"dependencies": {
 		"@nestjs-modules/mailer": "^1.6.0",
+		"@nestjs/bull": "^0.4.0",
 		"@nestjs/common": "^7.6.15",
 		"@nestjs/config": "^0.6.3",
 		"@nestjs/core": "^7.6.15",
@@ -37,6 +38,7 @@
 		"axios": "^0.21.1",
 		"bcrypt": "^5.0.1",
 		"bluebird": "^3.7.2",
+		"bull": "^3.25.1",
 		"cache-manager": "^3.4.4",
 		"cache-manager-redis-store": "^2.0.0",
 		"class-transformer": "^0.4.0",
@@ -66,6 +68,7 @@
 		"@nestjs/testing": "^7.6.15",
 		"@types/bcrypt": "^5.0.0",
 		"@types/bluebird": "^3.5.35",
+		"@types/bull": "^3.15.2",
 		"@types/cache-manager": "^3.4.0",
 		"@types/cron": "^1.7.2",
 		"@types/express": "^4.17.11",
@@ -73,6 +76,7 @@
 		"@types/jsonwebtoken": "^8.5.2",
 		"@types/lodash": "^4.14.170",
 		"@types/morgan": "^1.9.2",
+		"@types/multer": "^1.4.7",
 		"@types/node": "^14.14.36",
 		"@types/passport-jwt": "^3.0.5",
 		"@types/supertest": "^2.0.10",
