implement upload quueu

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"@nestjs/passport": "^7.1.6",
 		"@nestjs/platform-express": "^7.6.15",
 		"@nestjs/schedule": "^0.4.3",
+		"@nestjs/serve-static": "^2.2.2",
 		"@nestjs/swagger": "^4.8.2",
 		"apollo-server-express": "^2.25.2",
 		"axios": "^0.21.1",
@@ -43,6 +44,7 @@
 		"cache-manager-redis-store": "^2.0.0",
 		"class-transformer": "^0.4.0",
 		"class-validator": "^0.13.1",
+		"cloudinary": "^1.26.2",
 		"graphql": "^15.5.1",
 		"graphql-tools": "^7.0.5",
 		"handlebars": "^4.7.7",
