--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"@nestjs/schedule": "^0.4.3",
 		"@nestjs/serve-static": "^2.2.2",
 		"@nestjs/swagger": "^4.8.2",
+		"@nestjs/typeorm": "^8.0.1",
 		"apollo-server-express": "^2.25.2",
 		"axios": "^0.21.1",
 		"bcrypt": "^5.0.1",
@@ -57,11 +58,13 @@
 		"nodemailer": "^6.6.2",
 		"passport": "^0.4.1",
 		"passport-jwt": "^4.0.0",
+		"pg": "^8.6.0",
 		"reflect-metadata": "^0.1.13",
 		"rimraf": "^3.0.2",
 		"rxjs": "^7.1.0",
 		"swagger-ui-express": "^4.1.6",
 		"type-graphql": "^1.1.1",
+		"typeorm": "^0.2.34",
 		"uuid": "^8.3.2"
 	},
 	"devDependencies": {
