--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
         "dev": "NODE_ENV=development nest start --watch",
         "start:debug": "nest start --debug --watch",
         "start:prod": "node dist/main",
-        "migrate:create": "typeorm migration:create -n ",
+        "typeorm": "NODE_ENV=migration ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js --config ormconfig.ts",
+        "migrate:create": "yarn typeorm migration:create -n",
+        "migrate:up": "yarn typeorm migration:run",
+        "migrate:down": "yarn typeorm migration:revert",
         "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
         "test": "jest",
         "test:watch": "jest --watch",
@@ -27,17 +30,14 @@
         "@nestjs/common": "^7.6.15",
         "@nestjs/config": "^0.6.3",
         "@nestjs/core": "^7.6.15",
-        "@nestjs/graphql": "^7.11.0",
         "@nestjs/jwt": "^7.2.0",
         "@nestjs/mapped-types": "*",
-        "@nestjs/mongoose": "^7.2.4",
         "@nestjs/passport": "^7.1.6",
         "@nestjs/platform-express": "^7.6.15",
         "@nestjs/schedule": "^0.4.3",
         "@nestjs/serve-static": "^2.2.2",
         "@nestjs/swagger": "^4.8.2",
         "@nestjs/typeorm": "^8.0.1",
-        "apollo-server-express": "^2.25.2",
         "axios": "^0.21.1",
         "bcrypt": "^5.0.1",
         "bluebird": "^3.7.2",
@@ -47,14 +47,11 @@
         "class-transformer": "^0.4.0",
         "class-validator": "^0.13.1",
         "cloudinary": "^1.26.2",
-        "graphql": "^15.5.1",
-        "graphql-tools": "^7.0.5",
         "handlebars": "^4.7.7",
         "helmet": "^4.6.0",
         "jsonwebtoken": "^8.5.1",
         "lodash": "^4.17.21",
         "moment": "^2.29.1",
-        "mongoose": "^5.12.15",
         "morgan": "^1.10.0",
         "nodemailer": "^6.6.2",
         "passport": "^0.4.1",
@@ -64,7 +61,6 @@
         "rimraf": "^3.0.2",
         "rxjs": "^7.1.0",
         "swagger-ui-express": "^4.1.6",
-        "type-graphql": "^1.1.1",
         "typeorm": "^0.2.34",
         "uuid": "^8.3.2"
     },
