--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
         "@nestjs/mapped-types": "*",
         "@nestjs/passport": "^7.1.6",
         "@nestjs/platform-express": "^7.6.15",
+        "@nestjs/platform-socket.io": "^8.0.6",
         "@nestjs/schedule": "^0.4.3",
         "@nestjs/serve-static": "^2.2.2",
         "@nestjs/swagger": "^4.8.2",
         "@nestjs/typeorm": "^8.0.1",
+        "@nestjs/websockets": "^8.0.6",
         "axios": "^0.21.1",
         "bcrypt": "^5.0.1",
         "bluebird": "^3.7.2",
